--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/New-calculator-/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MINTCALC - The All-in-One Calculator</title>
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/New-calculator-/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/mathjs@12.4.2/lib/browser/math.js"></script>
     <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
@@ -48,47 +48,47 @@
         --inset-shadow-dark: #ffffff;
       }
       .theme-yellow {
-        --bg-color: #fefce8; /* yellow-50 */
-        --text-color: #713f12; /* amber-900 */
-        --primary-color: #f59e0b; /* amber-500 */
+        --bg-color: #fefce8;
+        --text-color: #713f12;
+        --primary-color: #f59e0b;
         --shadow-light: #ffffff;
-        --shadow-dark: #fde68a; /* yellow-300 */
+        --shadow-dark: #fde68a;
         --inset-shadow-light: #fde68a;
         --inset-shadow-dark: #ffffff;
       }
       .theme-coffee {
-        --bg-color: #3e2723; /* brown-900 */
-        --text-color: #d7ccc8; /* brown-100 */
-        --primary-color: #a1887f; /* brown-300 */
-        --shadow-light: #4e342e; /* brown-800 */
+        --bg-color: #3e2723;
+        --text-color: #d7ccc8;
+        --primary-color: #a1887f;
+        --shadow-light: #4e342e;
         --shadow-dark: #2d1b18;
         --inset-shadow-light: #2d1b18;
         --inset-shadow-dark: #4e342e;
       }
       .theme-lavender {
-        --bg-color: #f5f3ff; /* violet-50 */
-        --text-color: #4c1d95; /* violet-900 */
-        --primary-color: #8b5cf6; /* violet-500 */
+        --bg-color: #f5f3ff;
+        --text-color: #4c1d95;
+        --primary-color: #8b5cf6;
         --shadow-light: #ffffff;
-        --shadow-dark: #ddd6fe; /* violet-200 */
+        --shadow-dark: #ddd6fe;
         --inset-shadow-light: #ddd6fe;
         --inset-shadow-dark: #ffffff;
       }
       .theme-sky {
-        --bg-color: #f0f9ff; /* sky-50 */
-        --text-color: #0c4a6e; /* sky-900 */
-        --primary-color: #38bdf8; /* sky-400 */
+        --bg-color: #f0f9ff;
+        --text-color: #0c4a6e;
+        --primary-color: #38bdf8;
         --shadow-light: #ffffff;
-        --shadow-dark: #e0f2fe; /* sky-100 */
+        --shadow-dark: #e0f2fe;
         --inset-shadow-light: #e0f2fe;
         --inset-shadow-dark: #ffffff;
       }
       .theme-red {
-        --bg-color: #fee2e2; /* red-100 */
-        --text-color: #7f1d1d; /* red-900 */
-        --primary-color: #ef4444; /* red-500 */
-        --shadow-light: #fef2f2; /* red-50 */
-        --shadow-dark: #fca5a5; /* red-300 */
+        --bg-color: #fee2e2;
+        --text-color: #7f1d1d;
+        --primary-color: #ef4444;
+        --shadow-light: #fef2f2;
+        --shadow-dark: #fca5a5;
         --inset-shadow-light: #fca5a5;
         --inset-shadow-dark: #fef2f2;
       }
@@ -104,33 +104,33 @@
       .neumorphic-button:active {
         box-shadow: inset 6px 6px 12px var(--inset-shadow-light), inset -6px -6px 12px var(--inset-shadow-dark);
       }
-       .neumorphic-inset {
+      .neumorphic-inset {
         box-shadow: inset 6px 6px 12px var(--inset-shadow-light), inset -6px -6px 12px var(--inset-shadow-dark);
       }
-       .neumorphic-flat {
+      .neumorphic-flat {
         box-shadow: 3px 3px 6px var(--shadow-dark), -3px -3px 6px var(--shadow-light);
       }
       .neumorphic-flat:active {
         box-shadow: inset 3px 3px 6px var(--inset-shadow-light), inset -3px -3px 6px var(--inset-shadow-dark);
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://aistudiocdn.com/react@^19.1.1",
+        "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+        "react/": "https://aistudiocdn.com/react@^19.1.1/"
+      }
+    }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/New-calculator-/index.tsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js').then(registration => {
+          navigator.serviceWorker.register('/New-calculator-/sw.js').then(registration => {
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
           }, err => {
             console.log('ServiceWorker registration failed: ', err);
